# academic-assistant-bot

./: .env.example  .gitignore  Dockerfile  check_db.py  docker-compose.yml  main.py  patch_db.py  pyproject.toml  render.yaml  requirements.txt  test_output.txt
app/: config.py
app/admin/: menus.py  permissions.py  states.py
app/ai/: academic_extraction_client.py  chatbot_client.py  confidence.py  extraction.py  gemini_client.py  groq_client.py  prompts.py  safety_client.py
app/bot/: __init__.py  webhook.py
app/bot/handlers/: __init__.py  (+7 more)
app/cache/: redis_cache.py
app/database/: crud.py  models.py  session.py
app/events/: bus.py  handlers.py
app/files/: parser.py
app/logging/: __init__.py
app/metrics/: tracker.py
app/ocr/: engine.py
app/reminders/: formatter.py  scheduler.py
app/routing/: classifier.py  router.py
app/services/: academic_item_service.py  acceptance_service.py  announcement_formatter.py  calendar_export.py  coverage_parser.py  event_service.py  exam_coverage_service.py  intent_router.py  quiz_engine.py  reminder_service.py  routing_service.py  runtime_diagnostics.py  semester_service.py  startup_service.py  topic_context.py  weekly_digest.py
app/utils/: keep_alive.py  text.py  timezone.py
scripts/: check_group_access.py  check_polling_conflict.py  check_telegram_runtime.py  inspect_neon_context.py
tests/: conftest.py  test_acceptance_diagnostics.py  test_admin_feature_flows.py  test_classifier.py  test_confidence.py  test_formatter.py  test_html_sanitization.py  test_ocr.py  test_runtime_diagnostics.py  test_services.py
(+9 files in other folders)
